# Narrative-to-Neutral-Report-Transformer

./: .aiexclude  .gitignore  CONTRIBUTING.md  LICENSE.md  LLM_VS_NLP_POSITIONING.md  README.md  guidelines.md  pyproject.toml  v1_reliable_example.txt  v2_current_output.txt  v2_fresh_output.txt  v2_test_output.txt
.agent/analysis/: structured_py_refactor_analysis.md
.agent/audits/: delta_by_delta_analysis.md  fix_plan_issue_1_narrative_corruption.md  global_refactor_failure_analysis.md  honest_gap_analysis.md  refactor_audit_20260119.md  refactor_completion_summary.md  stage_0_audit.md  stage_0_completion_plan.md  stage_1_audit.md  stage_1_completion_plan.md  stage_2_audit.md  stage_2_completion_plan.md  stage_3_audit.md  stage_3_completion_plan.md  stage_4_audit.md  stage_4_completion_plan.md  stage_5_audit.md  stage_5_completion_plan.md  structured_py_git_version.py  v1_v2_comprehensive_analysis.md  v1_v2_diff_status.md  v1_v2_full_diff.txt  v1_v2_gap_analysis.md  v1_v2_gap_analysis_round2.md  v2_improvement_opportunities.md  v2_quality_audit_round3.md  v2_quality_audit_round4.md  v2_quality_improvement_plan.md  v2_remaining_issues.md  v2_status_report.md  v2_strategic_assessment.md
.agent/milestones/: architecture_refactor_roadmap.md  critical_review.md  deferred_work_analysis.md  honest_assessment_20260118.md  pre_stage5_review.md  stage_0_atom_schema.md  stage_1_classification.md  stage_2_selection.md  stage_3_renderer.md  stage_4_rules.md  stage_5_domains.md  stages_0_1_review.md
.agent/workflows/: dev.md
.gemini/: IMPLEMENTATION_PLAN_V4_ABERRATION.md
.github/workflows/: ci.yml
data/golden/: README.md  case_001_police_encounter.yaml  case_002_witness_statement.yaml  case_003_factual_only.yaml
data/synthetic/: example_001.yaml  extreme_cases.yaml  extreme_cases_template.yaml  hard_cases.yaml
docs/: CONTEXT_METADATA_AND_REFERENCES.md  CONVERSATION_INTRO_AND_CONTEXT.md  IR_SPEC_v0_1.md  NARRATIVE_RESPONSE_AND_DEFENSE_MOTIVATION.md  PROJECT_STRUCTURE_AND_DOMAIN_STYLE.md  README.md  SCOPE_AND_ETHICS.md  v6_features.md
docs/analysis/: architectural_gap_analysis_v4.md  comprehensive_pre_alpha_audit.md  deep_architectural_review.md  infrastructure_gaps_v1.md  infrastructure_gaps_v2.md  infrastructure_gaps_v3.md  pre_alpha_audit.md  pre_alpha_gap_analysis.md
docs/architecture/: DATA_FLOW_PROBLEM.md  MINIMAL_REFACTOR.md  REFACTORING_PROPOSAL.md  architecture_guide.md  policy_engine_redesign.md
docs/design/: decomposition_rules.md  diff_comparison_feature.md  logging_system.md  nnrt_quality_analysis.md  nnrt_v3_architecture.md  pass_logging_plan.md  v3_implementation_plan.md  v4_remediation_plan.md  v6_timeline_research.md
docs/future/: FactualReport.md  MultiOutputMode.md
docs/milestones/: milestone0.md  milestone1.md  milestone2.md  milestone3.md  road_to_pre_alpha.md  v5_blocking_issues.md  v6_verification_platform.md
docs/research/: decomposition_research.md
docs/roadmap/: QUICK_REFERENCE.md  nnrt_v2_roadmap.md
docs/schema/: gold_standard_example.md  nnrt_output_schema_v0.1.yaml
docs/specs/: README.md  p51-contradiction-detection.md  phase1_statement_classification.md  phase2_structured_output.md  phase3_4_uncertainty_entities.md  phase4_implementation_plan.md  phase5_validation.md
examples/: __init__.py  v6_comparison_example.py  v6_questions_example.py  v6_timeline_example.py
nnrt/: __init__.py
nnrt/cli/: __init__.py  main.py
nnrt/core/: __init__.py  context.py  contracts.py  engine.py  logging.py  versioning.py
nnrt/domain/: __init__.py  integration.py  loader.py  schema.py
nnrt/ir/: __init__.py  enums.py  schema_v0_1.py  serialization.py
nnrt/nlp/: __init__.py  enhanced_event_extractor.py  interfaces.py  llm_event_extractor.py  spacy_loader.py
nnrt/output/: __init__.py  structured.py
nnrt/passes/: __init__.py  p00_normalize.py  p10_segment.py  p20_tag_spans.py  p22_classify_statements.py  p25_annotate_context.py  p26_decompose.py  p27_classify_atomic.py  p27_epistemic_tag.py  p27b_attribute_statements.py  p28_link_provenance.py  p30_extract_identifiers.py  p32_extract_entities.py  p33_resolve_text_coref.py  p34_extract_events.py  p35_classify_events.py  p36_resolve_quotes.py  p38_extract_items.py  p40_build_ir.py  p42_coreference.py  p43_resolve_actors.py  p44_timeline.py  p44_timeline_v6.py  p50_policy.py  (+13 more)
scripts/: run_extreme_cases.py  stress_test.py  validate_pre_alpha.py
stress_tests/: __init__.py  _template.yaml  runner.py  schema.yaml
tests/: __init__.py  conftest.py  test_golden.py  test_hard_cases.py  test_integration.py  test_ir.py  test_observation_split.py  test_p27_epistemic_tag.py  test_p27b_attribute_statements.py  test_p72_safety_scrub.py  test_pipeline.py  test_render_structured.py  test_selection.py  test_ultimate_challenge.py  test_v4_integration.py
web/: app.js  examples.json  index.html  server.py  styles.css
(+97 files in other folders)
