[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nnrt"
version = "0.3.0"
description = "Narrative-to-Neutral Report Transformer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "NNRT Contributors" }
]
keywords = ["nlp", "text-transformation", "narrative", "neutral"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    # NLP (will be optional in production)
    # "transformers>=4.35",
    # "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
nlp = [
    "transformers>=4.35",
    "torch>=2.0",
    "spacy>=3.7",
    "accelerate>=0.25",
    "sentencepiece>=0.1.99",
    "google-generativeai>=0.3",  # V10: LLM-based event extraction
]
production = [
    "pyyaml>=6.0",
    "structlog>=23.0",
]
all = [
    "nnrt[dev,nlp,production]",
]

[project.scripts]
nnrt = "nnrt.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["nnrt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=nnrt --cov-report=term-missing"
