[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nnrt"
version = "0.3.0"
description = "Narrative-to-Neutral Report Transformer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "NNRT Contributors" }
]
keywords = ["nlp", "text-transformation", "narrative", "neutral"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    # spaCy is the core NLP engine (imported across nnrt/passes and nnrt/nlp);
    # the language model (en_core_web_sm) is a separate data download.
    "spacy>=3.7",
    # spaCy's CLI imports `click` directly (spacy/cli/_util.py) but only declares
    # `typer`, so pin it explicitly or `import spacy` fails with No module 'click'.
    "click>=8.0",
    # structlog is the logging backbone, imported unconditionally in core passes.
    "structlog>=23.0",
    # PyYAML backs the policy/domain config loaders (nnrt/policy, nnrt/domain).
    "pyyaml>=6.0",
    # Heavy / optional (local-LLM event extraction) stay in the `nlp` extra:
    # transformers, torch, accelerate, sentencepiece, google-generativeai.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
nlp = [
    # spaCy is now a core dependency; this extra adds the heavy local-LLM stack.
    "transformers>=4.35",
    "torch>=2.0",
    "accelerate>=0.25",
    "sentencepiece>=0.1.99",
    "google-generativeai>=0.3",  # V10: LLM-based event extraction
]
all = [
    # structlog, pyyaml and spaCy are now core dependencies; `all` adds the
    # dev tooling plus the heavy local-LLM stack.
    "nnrt[dev,nlp]",
]

[project.scripts]
nnrt = "nnrt.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["nnrt"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Dated backup snapshots are dead code kept for reference — not linted.
extend-exclude = ["*_backup_*.py", "*_backup.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Deferred (pre-alpha): line-length reflow (E501) and math/NLP-style variable
# names (N806, e.g. `X`, `IR`) are cosmetic and pervasive; kept out of the gate
# until a dedicated style pass. All correctness rules (F, E-syntax, I, W, UP)
# stay enforced.
ignore = ["E501", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=nnrt --cov-report=term-missing"
markers = [
    "unit: fast, isolated tests for a single pass or module",
    "integration: multi-pass or full pipeline tests",
    "golden: regression tests with locked-in expected behavior",
    "stress: comprehensive, adversarial, or high-complexity tests",
]
